3PalmsSecurity/Content/site.css
h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
    font-family: "Helvetica Neue", "Segoe UI", Segoe, Helvetica, Arial, "Lucida Grande", sans-serif;
    font-weight: 300;
    line-height: 1.1;
}

body {
    padding-bottom: 20px;
    padding-top: 150px;
    overflow-x: hidden;
}

h1 {
    font-family: Verdana, Geneva, Tahoma, sans-serif
}

/*margin-top is -20 to hide fixed image in .header*/ 
.footer {
    margin-top: -20px;
    background-color: white;
}

.header {
    position: relative;
}

/*resolves resize issue with .header image at width 767 px or fewer*/ 
@media (max-width: 767px) {
    .header img {
        margin-left: 20px;
        margin-bottom: -15px;
    }
}

.banner {
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 100px;
    box-sizing: border-box;
    background: rgba(78, 84, 88, 0.8);
    color: #fff;    
    display: table;
}

.banner-text {
    text-align: center;
    display: table-cell;
    vertical-align: middle;
}

/* QR code generator */
#qrCode {
    margin: 15px;
}

.nav-item {
    margin-left: 10px;
    margin-right: 10px;
    display: inline-block;
}

.navbar-brand {
    margin-left: 50px;
}

.navbar {
    min-height: 75px;
    background-color: white;
    border-bottom: solid;
    border-width: 5px;
    border-color: rgb(240, 240, 240);
    /*background-color: #e3f2fd;*/
}

.navbar-row {
    margin-right: 30px;
}

.btn-outline-primary {
    color: rgb(127, 127, 127) !important;
    background-color: transparent !important;
    border-color: rgb(127, 127, 127) !important;
}

.btn-outline-primary:hover {
    background-color: rgb(78, 84, 88) !important;
    color: white !important;
}

.btn-outline-secondary {
    color: black !important;
    background-color: white !important;
    border-color: rgb(63, 93, 109) !important;
}

.btn-outline-secondary:hover {
    background-color: rgb(158, 158, 158) !important;
    color: black !important;
}

.btn-outline-secondary-disabled {
    color: black !important;
    background-color: rgb(237, 229, 206) !important;
    border-color: rgb(63, 93, 109) !important;
}

.img-circle {
    border-radius: 50%;
    border: 1px solid black;
}

.navbar i.fa {
    display: inline-block;
    border-radius: 60px;
    box-shadow: 0px 0px 2px #888;
    padding: 0.5em 0.6em;
}

/*
*   WHO WE SERVE
*/

#who-we-serve {
    background-color: white;
}

#who-we-serve .col {
    text-align: center;
    display: block;
    margin: auto;
    padding: 20px;
}

#who-we-serve p {
    margin-left: 70px;
    margin-right: 70px;
}

#who-we-serve h5 {
    text-align: center;
}

.serve-header {
    padding: 10px;
}

.section {
    padding: 40px;
}

.section-title {
    margin-bottom: 10px;
}

.section-subtitle {
    margin-bottom: 20px;
}

.section-title, .section-subtitle {
    margin-left: 70px;
    margin-right: 70px;
    text-align: center;
}

/*
*   WHAT WE DO
*/

#what-we-do {
    background-color: white;
}

#what-we-do .col {
    text-align: center;
    display: block;
    margin: auto;
    padding: 20px;
}

#what-we-do p {
    margin-left: 70px;
    margin-right: 70px;
    text-align: justify;
}

/*
*   WHO WE ARE
*/

#who-we-are .col {
    text-align: center;
    display: block;
    margin: auto;
    padding: 20px;
}

#who-we-are {
    background-color: rgb(133, 26, 32);
    color: white;
}

#who-we-are p {
    margin-bottom: 40px;
    margin-left: 70px;
    margin-right: 70px;
}

.about-img {
    border-radius: 50%;
}

#who-we-are-images p {
    margin-left: 70px;
    margin-right: 70px;
}

#who-we-are-images h3 {
    padding-bottom: 0px;
}

#who-we-are-images h5 {
    font-style: italic;
}

#who-we-are-text p {
    margin-left: 70px;
    margin-right: 70px;
    text-align: justify;
}

#who-we-are-text h3 {
    /*margin-left: 70px;*/
    padding-bottom: 10px;
}

#who-we-are-text h5 {
    /*margin-left: 70px;*/
    font-style: italic;
    margin-bottom: 20px;
}

/*
*   SOLUTIONS
*/

#solutions {
    min-height: 400px;
    background-color: rgb(78, 84, 88);
    color: white;
}

#solutions .col {
    text-align: center;
    display: block;
    margin: auto;
    padding: 20px;
}

#solutions p {
    margin: auto;
    text-align: justify;
    width: 75%;

}

#solutions img {
    /*margin: 50px;*/
    max-height: 100%;
}

#solutions > col {
    vertical-align: middle;
}

#solutions img {
    margin-bottom: 40px;
}

/*
*  CONTACT US
*/

#contact-us {
    min-height: 400px;
    background-color: rgb(78, 84, 88);
    color: white;
}

#contact-us .col {
    display: block;
    margin: auto;
}


#contact-us a {
    text-align: center;
    display: block;
    margin: auto;
}

.contact-us-form {
    padding-top: 20px;
    padding-bottom: 20px;
    margin: auto;
    margin-bottom: 20px;
    max-width: 800px;
}

#contact-us a {
    display: inline-block;
}

.social-icon-container {
    text-align: center;
}

.social-icon {
    color: white;
    margin-right: 25px;
    margin-left: 25px;
}

.social-icon:hover {
    color: rgb(158, 158, 158);
}

/*full width container*/
@media (max-width: 767px) {
    .block {
        margin-left: -20px;
        margin-right: -20px;
    }
}

.nav-link:hover {
    cursor: pointer;
}

/*loader animations for loading lists and for saving*/
.loader {
    margin: auto;
    position: center;
    border: 3px solid #f3f3f3; /* Light grey */
    border-top: 3px solid rgb(63, 93, 109); /* Blue */
    border-radius: 50%;
    width: 2em;
    height: 2em;
    font-size: 10px;
    animation: spin 2s linear infinite;
}

@keyframes spin {
    0% {
        transform: rotate(0deg);
    }

    100% {
        transform: rotate(360deg);
    }
}

/*.g-recaptcha {
    transform-origin: left top;
    -webkit-transform-origin: left top;
}*/

/*.g-recaptcha iframe {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}*/

